add getClothes_By_Size_Or_Color logic